force-app/main/default/objects/Board_Governance_Report__c/Board_Governance_Report__c.object-meta.xml
<CustomObject>
    <label>Board Governance Report</label>
    <pluralLabel>Board Governance Reports</pluralLabel>
    <nameField>
        <displayFormat>BGR-{0000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>