force-app/main/default/objects/Board_Governance_Report__c/fields/Board_Oversight_Description__c.field-meta.xml
<CustomField>
    <fullName>Board_Oversight_Description__c</fullName>
    <label>Board Oversight Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>