force-app/main/default/objects/Board_Governance_Report__c/fields/Governance_Description__c.field-meta.xml
<CustomField>
    <fullName>Governance_Description__c</fullName>
    <label>Governance Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>