force-app/main/default/objects/Board_Governance_Report__c/fields/Management_Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Management_Role_Description__c</fullName>
    <label>Management Role Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>