force-app/main/default/objects/Board_Governance_Report__c/fields/Report_Period__c.field-meta.xml
<CustomField>
    <fullName>Report_Period__c</fullName>
    <label>Report Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>