force-app/main/default/objects/Board_Governance_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Annual_10K</fullName><default>false</default><label>Annual 10-K</label></value>
            <value><fullName>Quarterly_Update</fullName><default>false</default><label>Quarterly Update</label></value>
            <value><fullName>Ad_Hoc</fullName><default>false</default><label>Ad Hoc</label></value>
            <value><fullName>Board_Briefing</fullName><default>false</default><label>Board Briefing</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>