force-app/main/default/objects/Board_Governance_Report__c/fields/Risk_Management_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_Description__c</fullName>
    <label>Risk Management Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>