force-app/main/default/objects/Board_Governance_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Under_Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Published</fullName><default>false</default><label>Published</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>