force-app/main/default/objects/Board_Governance_Report__c/fields/Strategy_Description__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Description__c</fullName>
    <label>Strategy Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>